--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -55,7 +55,7 @@
 
                 <div class="col-12">
                     <center>
-                        <button id="iniciarSesion" class="btn btnLogin">
+                        <button id="iniciarSesion" class="btn btnLogin" type="button">
                             <h6 class="text">Iniciar Sesión</h6>
                         </button>
                     </center>
@@ -81,8 +81,8 @@
         </div>
     </main>
 
-    <script src="src/js/sonido.js"></script>
     <script src="src/js/main.js"></script>
+    <script src="src/js/sonido.js"></script>
     <script src="../bootstrap/js/bootstrap.js"></script>    
     <script src="../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
