--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -9,12 +9,13 @@
     <title>Menu</title>
 </head>
 <body>
+    <h1 class="menu-title">Menú de Juegos</h1>
+    <div class="back-button">
+        <a href="../interfaz/index.html"><img class="back-button-img" src="../img/icon/image.png" alt="Icono de retroceder"></a>
+        <p class="back-button-text">Regresar</p>
+    </div>
     <div class="game-menu">
-        <h1 class="menu-title">Menú de Juegos</h1>
-        <div class="back-button">
-            <a href="../interfaz/index.html"><img class="back-button-img" src="../img/icon/image.png" alt="Icono de retroceder"></a>
-            <p class="back-button-text">Regresar</p>
-        </div>
+        
         <div class="games-container">
             <div class="game-option">
                 <img src="../img/2.jpeg" alt="Juego 1" class="game-image">
@@ -229,7 +230,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                <a href="../login/index.html" class="btn btn-danger">Cerrar</a>
+                <button class="btn btn-danger" id="cerrarSesion">Cerrar Sesión</button>
             </div>
         </div>
     </div>
@@ -267,6 +268,8 @@
 
 
 <audio id="backgroundMusic" src="../audio/no-copyright-music-181373.mp3" loop></audio>
+
+    <script src="js/main.js"></script>
     <script src="../bootstrap/js/bootstrap.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
