--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -164,15 +164,13 @@
 
         <h6>Cambiar Avatar</h6>
         <p>Personas</p>
-        <div class="avatar-options2">
-            <img src="../img/avatar1.png" class="avatar-option2" data-avatar="../img/avatar1.png" alt="Avatar 1">
-            <img src="../img/avatar4.png" class="avatar-option2" data-avatar="../img/avatar4.png" alt="Avatar 4">
-            <img src="../img/avatar5.png" class="avatar-option2" data-avatar="../img/avatar5.png" alt="Avatar 5">
-            <img src="../img/avatar6.png" class="avatar-option2" data-avatar="../img/avatar6.png" alt="Avatar 6">
-            <img src="../img/avatar7.png" class="avatar-option2" data-avatar="../img/avatar7.png" alt="Avatar 7">
+        <div class="avatar-options2" id="piratas">
+            
         </div>
+
         <p>Animales</p>
-        <div class="avatar-options2">
+
+        <div class="avatar-options2" id="bloqueados">
             <img src="../img/avatar8.png" class="avatar-option2" data-avatar="../img/avatar8.png" alt="Avatar 8">
             <img src="../img/avatar9.png" class="avatar-option2" data-avatar="../img/avatar9.png" alt="Avatar 9">
             <img src="../img/avatar10.png" class="avatar-option2" data-avatar="../img/avatar10.png" alt="Avatar 10">
