--- a/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <img class="logo" src="../../img/logoN.png" alt="...">
+    <img class="logo" src="../../img/4.jpeg" alt="...">
 
     <div class="container">
         
