--- a/PROYECTO-MJC memoorize/multijugador/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/index.html
@@ -13,17 +13,17 @@
             <div class="col-1">
 
             </div>
-            <div class="col-10">
+            <div class="col-10 container">
                 <div class="logo col">
-                    <img src="../img/logoN.png" alt="">
+                    <img src="../img/4.jpeg" alt="">
                 </div>
                 <div class="opciones">
                     <div class="rowes">
                         <button id="crear" class="opcion">
-                            <p>Crear Sala</p>
+                            <h1 class="letras">Crear Sala</h1>
                         </button>
                         <button id="unirse" class="opcion">
-                            <p>Unirse a Sala</p>
+                            <h1 class="letras">Unirse a Sala</h1>
                         </button>
                     </div>    
                 </div>
