--- a/PROYECTO-MJC memoorize/multijugador/unirseSala/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/unirseSala/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="col-12">
-        <img class="logo" src="../../img/logoN.png" alt="...">
+        <img class="logo" src="../../img/4.jpeg" alt="...">
         <div class="codigoSala">
             <input class="input" type="number" id="codigoSala" maxlength="5" minlength="5" placeholder="codigo de la sala">
         </div>
