--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <title>Menu</title>
 </head>
 <body>
     <h1 class="menu-title">Menú de Juegos</h1>
     <div class="back-button">
         <a href="../interfaz/index.html"><img class="back-button-img" src="../img/icon/image.png" alt="Icono de retroceder"></a>
-        <p class="back-button-text">Regresar</p>
     </div>
     <div class="tienda text-center mt-4">
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tiendaModal">
@@ -20,6 +20,10 @@
             <span class="tienda-text">Tienda</span>
         </button>
     </div>
+    <div class="coin">
+        <img src="../img/icon/moneda.png" alt="Coin" class="coin-icon">
+        <span id="coin-count">10050</span>
+      </div>
     <!-- Boton circulo con moneda -->
         <div class="games-container">
             <div class="game-option">
