--- a/PROYECTO-MJC memoorize/juegos/rompecabeza/index.html
+++ b/PROYECTO-MJC memoorize/juegos/rompecabeza/index.html
@@ -130,7 +130,7 @@
     </script>
     <script>
         document.getElementById('boton-imagen').addEventListener('click', function() {
-            window.location.href = "../../interfaz/index.html";
+            window.location.href = "../../menu/index.html";
         });
     </script>
     
