--- a/PROYECTO-MJC memoorize/multijugador/index.html
+++ b/PROYECTO-MJC memoorize/multijugador/index.html
@@ -32,6 +32,11 @@
                 <button type="submit" onclick=""></button>
             </div>
         </div>
+        <img src="../menu/img/fondoAnimal-unscreen.gif" class="gif" width="300" alt="Imagen" id="imagen" style="cursor: pointer;">
+        
+            <div id="comentario" class="comentario">
+                ¡Este es un comentario aleatorio!
+            </div>
     </div>
 
 
