--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../img/logo2.png" type="image/icon">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Encabezado principal -->
