--- a/PROYECTO-MJC memoorize/juegos/quiz/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/index.html
@@ -7,6 +7,7 @@
     <title>Dificultad</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="shortcut icon" href="../../img/3.jpeg"> 
     
     <link rel="stylesheet" href="../../css/offcanvas.css">
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
@@ -18,18 +19,18 @@
     <div class="col-12 row">
         <div class="col-1">   
             <button id="home" class="btn" data-bs-toggle="modal" data-bs-target="#leaderboardModal">
-                <img class="imgConfiguracion" src="../../img/icon/sand-castle_6359048.png" alt="">
+                <img class="imgConfiguracion" src="../../img/9.png" alt="">
                 <span id="descHome" class="nombre-icono" style="display: none;">Puntuacion</span>  
             </button>        
                
             <button id="configuracionBtn" data-bs-toggle="modal" data-bs-target="#configuracion">
-                <img class="imgConfiguracion" src="../../img/icon/configuraciones.png" alt="">
+                <img class="imgConfiguracion" src="../../img/icon/conf.png" alt="">
                 <span id="descConfiguracion" class="nombre-icono" style="display: none;">Volumen</span>
             </button>             
         </div>
         <div class="col-10">
             <div class="logo">
-                <img src="../../img/logo/wordle.png" alt="" srcset="">
+                <img src="../../img/3.jpeg" alt="" srcset="">
             </div>
             <div class="container">
                 <div class="niveles">
