--- a/PROYECTO-MJC memoorize/interfaz/index.html
+++ b/PROYECTO-MJC memoorize/interfaz/index.html
@@ -15,7 +15,8 @@
         <div class="content">
             <h1>AQUA MEMORY</h1>
             <p>
-                 Sumérgete en un mundo lleno de diversión, donde cada juego que descubras será una oportunidad para ejercitar tu mente. ¡Prepárate para zambullirte y que la suerte te acompañe en este viaje!
+                 Sumérgete en un mundo lleno de diversión, donde cada juego que descubras será una oportunidad para ejercitar tu mente. 
+                 ¡Prepárate para zambullirte y que la suerte te acompañe en este viaje...🌊🐙!
 
 
             </p>
