--- a/PROYECTO-MJC memoorize/interfaz/index.html
+++ b/PROYECTO-MJC memoorize/interfaz/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/icono.png" type="image/icon">
     <title>Presentación</title>
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
         </div>
         <div class="content">
             <h1>AQUA MEMORY</h1>
-            <p>
+            <p >
                  Sumérgete en un mundo lleno de diversión, donde cada juego que descubras será una oportunidad para ejercitar tu mente. 
                  ¡Prepárate para zambullirte y que la suerte te acompañe en este viaje...🌊🐙!
 
