--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../../img/logo/aqua-Memorize.png" type="image/icon">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
