--- a/PROYECTO-MJC memoorize/login/recuperar/index.html
+++ b/PROYECTO-MJC memoorize/login/recuperar/index.html
@@ -6,6 +6,7 @@
 	<title>Recuperar contraseña</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="../img/logo2.png" type="image/icon">
+    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
 </head>
 <body>
