--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -32,8 +32,6 @@
                     <h4 class="text2">Registrate</h4>
                 </div>
 
-                <div class="alert alert-success" id="resultado"></div>
-
                 <div class="col-md-11 inputIcon">
                     <input type="text" class="form-control input" id="nickName" name="nickName" placeholder="nickName" required>
                     <span id="icon"> 
@@ -46,6 +44,9 @@
                     <span id="icon"> 
                         <img src="../../img/icon/arroba.png" alt="">
                     </span>
+                    <div id="emailOk">
+
+                    </div>
                 </div>
 
                 <div class="col-md-11 inputIcon">
@@ -57,7 +58,7 @@
 
                 <div class="col-12">
                     <center>
-                        <button type="submit" class="btn btnLogin" id="registrar">
+                        <button type="button" class="btn btnLogin" id="registrar">
                             <h6 class="text">Registrarte</h6>
                         </button>
                     </center>
@@ -94,7 +95,7 @@
 
 
     <audio id="miCancion" src="../../audio/no-copyright-music-181373.mp3" preload="auto" loop></audio>
-    <!--<script src="../../services/responseRegistro.js"></script>-->
+    <script src="../../services/responseRegistro.js"></script>
     <script src="src/js/sonido.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
