--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -73,22 +73,18 @@
     </main>
 
     
-    <!-- Modal para Editar Perfil -->
-    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+     <!-- Modal para Editar Perfil -->
+     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="editProfileModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="editProfileModalLabel">Editar Perfil</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
+            <div class="modal-content bodyModal">
                 <div class="modal-body">
                     <div id="response">
                     
                     </div>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="modal-title" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="modal-title" id="saveUsername">Guardar Cambios</button>
+                <div class="modal-footer bordeNone">
+                    <button type="button" class="modal-title hibtn" data-bs-dismiss="modal">Cerrar</button>
+
                 </div>
             </div>
         </div>
