--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -214,8 +214,8 @@
      </div>
      <div class="offcanvas-body">
          <div class="player-info">
-             <img src="../img/avatar1.png" alt="Avatar" class="avatar" id="currentAvatar">
-             <span id="playerName">Jugador 1</span>
+            <img src="../img/avatar1.png" alt="Avatar" class="avatar" id="avatar">
+            <span id="playerName">Jugador 1</span>
          </div>
          <p>Puntuación Total: <span id="totalScore">1500</span></p>
          <button id="editProfileButton" data-bs-toggle="modal" data-bs-target="#editProfileModal">Editar Perfil</button>
@@ -289,11 +289,12 @@
 <audio id="backgroundMusic" src="../audio/no-copyright-music-181373.mp3" loop></audio>
 
     <script src="js/main.js"></script>
-    <script src="../bootstrap/js/bootstrap.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/perfil.js"></script>
     <script src="js/sonido.js"></script>
+    <script src="../bootstrap/js/bootstrap.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    
  
     
 </body>
