--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -93,7 +93,7 @@
                         <tr>
                             <td>
                                 <div class="player-info">
-                                    <img src="../img/avatar1.png" alt="Avatar 1" class="avatar">
+                                    <img src="../img/pruebax.png" alt="Avatar 1" class="avatar">
                                     <span>Jugador 1</span>
                                 </div>
                             </td>
@@ -304,15 +304,67 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="tiendaModalLabel">Tienda</h5>
+                <h5 class="modal-title" id="tiendaModalLabel">Casino pirata</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Aquí puedes comprar objetos y mejoras para el juego.</p>
+                <div class="row">
+                    <div class="producto1">
+                        <img src="../img/pruebax.png" alt="producto1" class="producto-img" id="producto1">
+                        <div class="info-producto">
+                            <h3 class="nombre-producto" id="nombre-producto1">Lincon</h3>
+                            <img src="../img/icon/moneda.png"alt="Icono de comprar" class="descripcion-producto-img" id="descripcion-producto1">200</p >
+                        </div>
+                        <button class="comprar-button" id="comprar-button1">Comprar</button>
+                    </div>
+                        
+                    <div class="producto1">
+                        <img src="../img/pruebaxi.png" alt="producto1" class="producto-img" id="producto1">
+                        <div class="info-producto">
+                            <h3 class="nombre-producto" id="nombre-producto1">Bmo</h3>
+                            <img src="../img/icon/moneda.png"alt="Icono de comprar" class="descripcion-producto-img" id="descripcion-producto1">200</p >
+                        </div>
+                        <button class="comprar-button" id="comprar-button1">Comprar</button>
+                    </div>
+                    <div class="producto1">
+                        <img src="../img/pruebaq.png" alt="producto1" class="producto-img" id="producto1">
+                        <div class="info-producto">
+                            <h3 class="nombre-producto" id="nombre-producto1">Leo</h3>
+                            <img src="../img/icon/moneda.png"alt="Icono de comprar" class="descripcion-producto-img" id="descripcion-producto1">200</p >
+                        </div>
+                        <button class="comprar-button" id="comprar-button1">Comprar</button>
+                    </div>   
+                    <div class="producto1">
+                        <img src="../img/pruebaz.png" alt="producto1" class="producto-img" id="producto1">
+                        <div class="info-producto">
+                            <h3 class="nombre-producto" id="nombre-producto1">Mark</h3>
+                            <img src="../img/icon/moneda.png"alt="Icono de comprar" class="descripcion-producto-img" id="descripcion-producto1">200</p >
+                        </div>
+                        <button class="comprar-button" id="comprar-button1">Comprar</button>
+                    </div>   
+                    <div class="producto1">
+                        <img src="../img/pruebac.png" alt="producto1" class="producto-img" id="producto1">
+                        <div class="info-producto">
+                            <h3 class="nombre-producto" id="nombre-producto1">Lia</h3>
+                            <img src="../img/icon/moneda.png"alt="Icono de comprar" class="descripcion-producto-img" id="descripcion-producto1">200</p >
+                        </div>
+                        <button class="comprar-button" id="comprar-button1">Comprar</button>
+                    </div>   
+                    <div class="producto1">
+                        <img src="../img/pruebad.png" alt="producto1" class="producto-img" id="producto1">
+                        <div class="info-producto">
+                            <h3 class="nombre-producto" id="nombre-producto1">Agua</h3>
+                            <img src="../img/icon/moneda.png"alt="Icono de comprar" class="descripcion-producto-img" id="descripcion-producto1">200</p >
+                        </div>
+                        <button class="comprar-button" id="comprar-button1">Comprar</button>
+                    </div> 
+                         
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 <!-- Modal de cerrar sesion -->
 <div class="modal fade" id="cerrarModal" tabindex="-1" aria-labelledby="cerrarModalLabel" aria-hidden="true">
     <div class="modal-dialog">
