--- a/PROYECTO-MJC memoorize/juego3/index.html
+++ b/PROYECTO-MJC memoorize/juego3/index.html
@@ -25,7 +25,9 @@
             <div class="board" data-dimension="4"></div>
             <div class="win">Ganaste!</div>
         </div>
+      
     </div>
+    <button id="siguienteRonda" class="btn btn-success oculto">Siguiente Ronda</button>
 
     
     <script src="js/script_cartas.js"></script>
